--- a/Atividades/GrammarStarter/index.html
+++ b/Atividades/GrammarStarter/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Indefinite Articles - The Creation Story</title>
 
 <style>
-  /* -------- estilos originais (excluídos os de exercícios) -------- */
+  /* -------- estilos mantidos (sem coisas de exercícios) -------- */
   body{
     font-family:Arial, sans-serif;background:#f4f4f4;margin:0;padding:20px;line-height:1.6;
     background-image:url('../../../imagens/fundo.png');background-repeat:repeat;
@@ -26,11 +26,6 @@
   h2{background:#28a745;color:#fff;padding:10px;border-radius:4px;font-size:1.5rem;text-align:center;}
   .section{background:#d4edda;margin-bottom:20px;padding:20px;border-radius:5px;}
   .section p{margin:0;padding:10px 0;font-size:1.2rem;}
-  .btn-download{
-    display:block;width:100%;padding:15px;background:#218838;color:#fff;text-align:center;text-decoration:none;
-    border-radius:5px;margin-top:20px;cursor:pointer;font-size:1.2rem;border:none;
-  }
-  .btn-download:hover{background:#1e7e34;}
   .image-container{display:flex;justify-content:center;margin-bottom:20px;}
   .image-container img{max-width:100%;height:auto;border-radius:8px;}
   .button-container{display:flex;justify-content:center;margin-top:20px;flex-wrap:wrap;}
@@ -42,12 +37,18 @@
   .grammar-table th{background:#28a745;color:#fff;}
   .grammar-table td{background:#fff;}
 
-  /* Botão de finalizar lição */
-  .btn-finish{
-    display:block;width:100%;padding:15px;background:#343a40;color:#fff;text-align:center;text-decoration:none;
-    border-radius:5px;margin-top:12px;cursor:pointer;font-size:1.2rem;border:none;
+  /* Botões principais */
+  .btn{
+    display:block;width:100%;padding:15px;text-align:center;text-decoration:none;border-radius:5px;
+    cursor:pointer;font-size:1.2rem;border:none;
   }
-  .btn-finish:hover{background:#23272b;}
+  /* PDF: inicialmente oculto — só professor verá */
+  #btn-pdf{ display:none; background:#218838;color:#fff; margin-top:20px; }
+  #btn-pdf:hover{ background:#1e7e34; }
+
+  /* Finalizar lição */
+  .btn-finish{ background:#343a40;color:#fff; margin-top:12px; }
+  .btn-finish:hover{ background:#23272b; }
 </style>
 </head>
 
@@ -72,12 +73,17 @@
   <div class="button-container"></div>
   <div id="content"></div>
 
-  <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
-  <button id="finish-lesson-btn" class="btn-finish">I’m ready — finish this lesson</button>
+  <!-- PDF só para professor -->
+  <button id="btn-pdf" class="btn" onclick="generatePDF()">Download as PDF</button>
+  <!-- Botão de concluir lição (libera próxima fase) -->
+  <button id="finish-lesson-btn" class="btn btn-finish">I’m ready — finish this lesson</button>
 </div>
 
 <!-- ============ SCRIPTS ============ -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<!-- AutoTable p/ tabelas bonitas no PDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -96,13 +102,11 @@ firebase.initializeApp({
 });
 
 /* ---------- Helpers ---------- */
-const getLevelAndUnitFromURL = () => ({
-  level: new URLSearchParams(location.search).get('level'),
-  unit:  new URLSearchParams(location.search).get('unit')
-});
-const getPhaseFromURL = () => new URLSearchParams(location.search).get('fase') || '1'; /* default fase1 */
+const qs = new URLSearchParams(location.search);
+const getLevelAndUnitFromURL = () => ({ level: qs.get('level'), unit: qs.get('unit') });
+const getPhaseFromURL = () => qs.get('fase') || '1'; // default fase1
 
-/* ---------- Conteúdo ---------- */
+/* ---------- Inicialização ---------- */
 function initializeAppContent(){
   loadTextFile();
   setupBackButton();
@@ -111,23 +115,19 @@ function initializeAppContent(){
   setupFinishButton();
 }
 
+/* ---------- Carregar texto e montar HTML (sem exercícios) ---------- */
 function loadTextFile() {
   const { level, unit } = getLevelAndUnitFromURL();
   const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
   fetch(filePath)
-    .then(r => {
-      if (!r.ok) throw new Error(`HTTP ${r.status}`);
-      return r.text();
-    })
+    .then(r => { if (!r.ok) throw new Error(`HTTP ${r.status}`); return r.text(); })
     .then(text => {
       const content = document.getElementById('content');
       let html = '';
       let sectionOpen = false;
       let inTable = false;
       let isHeaderRow = true;
-
-      // flag para parar quando começar "Exercises/Exercícios/Practice"
       let skipExercises = false;
 
       const closeTable = () => {
@@ -140,49 +140,37 @@ function loadTextFile() {
 
       const closeSection = () => {
         closeTable();
-        if (sectionOpen) {
-          html += '</div>';
-          sectionOpen = false;
-        }
+        if (sectionOpen) { html += '</div>'; sectionOpen = false; }
       };
 
       text.split('\n').forEach(raw => {
-        if (skipExercises) return;                 // ignora tudo após a seção de exercícios
-
+        if (skipExercises) return;
         const line = raw.trim();
         if (!line) return;
 
-        /* ---------- TÍTULO DA PÁGINA ---------- */
+        // Título
         if (line.startsWith('Title: ')) {
           document.getElementById('title').innerText = line.replace('Title: ', '');
           document.getElementById('title').classList.add('page-title');
           return;
         }
 
-        /* ---------- NOVA SEÇÃO (# ) ---------- */
+        // Nova seção
         if (line.startsWith('# ')) {
           const sectionTitle = line.slice(2).trim();
-
-          // Seção de exercícios? ativa o skip e não renderiza
           if (/^(exercises?|exerc[íi]cios?|practice)\b/i.test(sectionTitle)) {
-            closeSection();
-            skipExercises = true;
-            return;
+            closeSection(); skipExercises = true; return;
           }
-
           closeSection();
-          html += `<div class="section"><h2>${sectionTitle}</h2>`;
-          sectionOpen = true;
-          return;
+          html += `<div class="section"><h2>${sectionTitle}</h2>`; sectionOpen = true; return;
         }
 
-        /* ---------- SUBTÍTULO (## ) ---------- */
+        // Subtítulo
         if (line.startsWith('## ')) {
-          html += `<h3 class="subtitle">${line.slice(3).toUpperCase()}</h3>`;
-          return;
+          html += `<h3 class="subtitle">${line.slice(3).toUpperCase()}</h3>`; return;
         }
 
-        /* ---------- IMAGEM INLINE ---------- */
+        // Imagem inline — renderizamos no HTML; para PDF vamos ignorar
         if (line.startsWith('#IMG:')) {
           const img = line.split(':')[1].trim();
           const base = filePath.substring(0, filePath.lastIndexOf('/'));
@@ -193,19 +181,12 @@ function loadTextFile() {
           return;
         }
 
-        /* ---------- TABELA ---------- */
+        // Tabela
         if (line.toLowerCase() === 'tablestart') {
           html += '<table class="grammar-table">';
-          inTable = true;
-          isHeaderRow = true;
-          return;
+          inTable = true; isHeaderRow = true; return;
         }
-
-        if (line.toLowerCase() === 'tableend') {
-          closeTable();
-          return;
-        }
-
+        if (line.toLowerCase() === 'tableend') { closeTable(); return; }
         if (inTable) {
           const cols = line.split('|').map(c => c.trim());
           if (isHeaderRow) {
@@ -217,12 +198,10 @@ function loadTextFile() {
           return;
         }
 
-        /* ---------- LINHAS TIPO EXERCÍCIO (descartadas) ---------- */
-        if (/\[Answer:.*?\]/i.test(line)) {
-          return;
-        }
+        // Linhas de exercícios — descartar
+        if (/\[Answer:.*?\]/i.test(line)) return;
 
-        /* ---------- PARÁGRAFOS COM MARCAÇÃO ---------- */
+        // Parágrafos
         const formatted = line
           .replace(/\*\*\*(.*?)\*\*\*/g, '<b><i>$1</i></b>')
           .replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')
@@ -230,10 +209,142 @@ function loadTextFile() {
         html += `<p>${formatted}</p>`;
       });
 
-      /* ---------- FECHA QUALQUER SEÇÃO/TABELA PENDENTE ---------- */
       closeSection();
-
       content.innerHTML = html;
+    })
+    .catch(console.error);
+}
+
+/* ---------- PDF (sem exercícios) com jsPDF-AutoTable ---------- */
+function generatePDF(){
+  const {level,unit} = getLevelAndUnitFromURL();
+  const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
+
+  fetch(filePath)
+    .then(r => r.text())
+    .then(data => {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF({ unit: 'pt', format: 'a4' });
+      const pageWidth = doc.internal.pageSize.getWidth();
+      const margin = 40;
+      let cursorY = margin;
+
+      const addTitle = (txt) => {
+        doc.setFont('helvetica','bold'); doc.setFontSize(18);
+        const lines = doc.splitTextToSize(txt, pageWidth - 2*margin);
+        lines.forEach(line => { doc.text(line, margin, cursorY); cursorY += 24; });
+        cursorY += 8;
+      };
+
+      const addSection = (txt) => {
+        doc.setFillColor(40,167,69); // verde do site (aprox.)
+        doc.setTextColor(255,255,255);
+        doc.setFont('helvetica','bold'); doc.setFontSize(14);
+        const h = 26;
+        doc.rect(margin, cursorY - 16, pageWidth - 2*margin, h, 'F');
+        doc.text(txt, margin + 10, cursorY + 2);
+        cursorY += h + 8;
+        doc.setTextColor(0,0,0);
+      };
+
+      const addParagraph = (txt) => {
+        doc.setFont('helvetica','normal'); doc.setFontSize(12);
+        const lines = doc.splitTextToSize(txt, pageWidth - 2*margin);
+        lines.forEach(line => { doc.text(line, margin, cursorY); cursorY += 16; });
+        cursorY += 4;
+        if (cursorY > doc.internal.pageSize.getHeight() - margin) {
+          doc.addPage(); cursorY = margin;
+        }
+      };
+
+      // Parse do texto para montar seções, parágrafos e tabelas
+      let skipping = false;
+      let inTable = false;
+      let tableRows = [];
+      let titlePrinted = false;
+
+      const flushTable = () => {
+        if (!inTable || tableRows.length === 0) return;
+        // Primeira linha é header
+        const headers = tableRows[0].map(h => ({ content: h, styles:{ halign:'left', fillColor:[40,167,69], textColor:[255,255,255] } }));
+        const body = tableRows.slice(1).map(r => r.map(c => ({ content: c })));
+
+        doc.autoTable({
+          head: [headers],
+          body,
+          startY: cursorY,
+          theme: 'grid',
+          styles: { font: 'helvetica', fontSize: 11, cellPadding: 6, lineWidth: 0.1 },
+          headStyles: { fillColor: [40,167,69], textColor: [255,255,255], halign: 'left' },
+          margin: { left: margin, right: margin }
+        });
+        cursorY = doc.lastAutoTable.finalY + 16;
+        inTable = false;
+        tableRows = [];
+      };
+
+      data.split('\n').forEach(raw => {
+        if (skipping) return;
+        const l = raw.trim();
+        if (!l) return;
+
+        // Pula a seção de exercícios e linhas com [Answer:]
+        if (/^\#\s*(exercises?|exerc[íi]cios?|practice)\b/i.test(l)) { flushTable(); skipping = true; return; }
+        if (/\[Answer:.*?\]/i.test(l)) return;
+
+        // Título
+        if (l.startsWith('Title: ')) {
+          flushTable();
+          addTitle(l.replace('Title: ', ''));
+          titlePrinted = true;
+          return;
+        }
+
+        // Seção
+        if (l.startsWith('# ')) {
+          flushTable();
+          addSection(l.slice(2).trim());
+          return;
+        }
+
+        // Subtítulo -> trata como parágrafo em CAPS
+        if (l.startsWith('## ')) {
+          flushTable();
+          addParagraph(l.slice(3).toUpperCase());
+          return;
+        }
+
+        // Imagem inline -> ignorar no PDF (caminho relativo costuma falhar); se quiser, podemos suportar depois
+        if (l.startsWith('#IMG:')) { return; }
+
+        // Tabela
+        if (l.toLowerCase() === 'tablestart') {
+          flushTable();
+          inTable = true; tableRows = []; return;
+        }
+        if (l.toLowerCase() === 'tableend') { flushTable(); return; }
+        if (inTable) {
+          const cols = l.split('|').map(c => c.trim());
+          tableRows.push(cols);
+          return;
+        }
+
+        // Parágrafo
+        const t = l.replace(/\*\*\*(.*?)\*\*\*/g, '$1')
+                   .replace(/\*\*(.*?)\*\*/g, '$1')
+                   .replace(/\*(.*?)\*/g, '$1');
+        addParagraph(t);
+      });
+
+      flushTable();
+
+      // Se não houve título, adiciona um genérico
+      if (!titlePrinted) {
+        doc.setFont('helvetica','bold'); doc.setFontSize(16);
+        doc.text('Grammar Lesson', margin, margin);
+      }
+
+      doc.save('grammar_lesson_creation.pdf');
     })
     .catch(console.error);
 }
@@ -256,56 +367,40 @@ async function updateNextPhase(userId){
       await dbRoot.child(`${level}/${unit}`).update({[`fase${phase}`]:true,[nextPhase]:true});
     }
     console.log('✅ Progresso atualizado.');
-  }catch(e){console.error('Erro ao atualizar progresso:', e);}
+  }catch(e){ console.error('Erro ao atualizar progresso:', e); }
 }
 
-/* ---------- PDF (sem exercícios) ---------- */
-function generatePDF(){
-  const {level,unit}=getLevelAndUnitFromURL();
-  fetch(`../../${level}/${unit}/DataGrammar/texto.txt`)
-    .then(r=>r.text())
-    .then(data=>{
-      const {jsPDF}=window.jspdf;const doc=new jsPDF();let y=20,m=20,max=170;
+/* ---------- Mostrar PDF só para professor ---------- */
+function revealPdfForTeachersOnly(uid){
+  // Ajuste os caminhos se seu "role" estiver salvo em outro lugar
+  const refs = [
+    firebase.database().ref(`usuarios/${uid}/role`),
+    firebase.database().ref(`usuarios/${uid}/perfil/tipo`)
+  ];
 
-      // Cabeçalho simples com logo (opcional, se existir)
-      try{ doc.addImage('Logo.png','PNG',90,y,30,30); y+=40; }catch(e){ /* ignora se não houver logo */ }
-
-      let skipping = false;
-      data.split('\n').forEach(raw=>{
-        if (skipping) return;
-        const l = raw.trim();
-
-        // Pula completamente a seção de exercícios e quaisquer linhas com [Answer:]
-        if (/^\#\s*(exercises?|exerc[íi]cios?|practice)\b/i.test(l)) { skipping = true; return; }
-        if (/\[Answer:.*?\]/i.test(l)) return;
-
-        const t = l.replace(/\[Answer:.*?\]/gi,'');
-        doc.setFontSize(l.startsWith('Title: ')?16:12);
-        const lines = doc.splitTextToSize(t,max);
-        lines.forEach(line=>{
-          doc.text(line,m,y); y+=8;
-          if (y > doc.internal.pageSize.height - m) { doc.addPage(); y = m; }
-        });
-        y+=2;
-        if (y > doc.internal.pageSize.height - m) { doc.addPage(); y = m; }
-      });
-
-      doc.save('grammar_lesson_creation.pdf');
+  // Tenta ler na ordem; se qualquer um retornar "teacher"/"professor", exibe
+  Promise.any(refs.map(r => r.get()))
+    .then(ss => {
+      const role = (ss && ss.val && ss.val()) || '';
+      const r = String(role).toLowerCase();
+      if (r === 'teacher' || r === 'professor') {
+        document.getElementById('btn-pdf').style.display = 'block';
+      }
     })
-    .catch(console.error);
+    .catch(()=>{/* sem papel => permanece oculto */});
 }
 
-/* ---------- Auxiliares UI ---------- */
+/* ---------- Navegação e outros auxiliares ---------- */
 const setupBackButton = () =>
   document.querySelector('.back-button').onclick = e => { e.preventDefault(); history.back(); };
 
 function loadProfessorButtons(){
-  const c=document.querySelector('.button-container');
-  const {level,unit}=getLevelAndUnitFromURL();
+  const c = document.querySelector('.button-container');
+  const { level, unit } = getLevelAndUnitFromURL();
   for(let i=1;i<=10;i++){
-    const img=new Image();img.src=`professores/professor${i}.png`;img.alt=`Professor ${i}`;
+    const img=new Image(); img.src=`professores/professor${i}.png`; img.alt=`Professor ${i}`;
     img.onload=()=>{
-      const b=document.createElement('button');b.appendChild(img);
+      const b=document.createElement('button'); b.appendChild(img);
       b.onclick=()=>{
         const path=`../../${level}/${unit}/DataGrammar/aulas/aula${i}/lesson.txt`;
         location.href=`../../../Atividades/Aulas_traduzidas/index.html?lessonPath=${encodeURIComponent(path)}&level=${level}&unit=${unit}`;
@@ -316,8 +411,9 @@ function loadProfessorButtons(){
 }
 
 function updateImagePath(){
-  const {level,unit}=getLevelAndUnitFromURL(), p=`../../${level}/${unit}/DataGrammar/image.png`;
-  fetch(p).then(r=>{ document.getElementById('main-image').src = r.ok ? p : 'default-image.png'; });
+  const { level, unit } = getLevelAndUnitFromURL();
+  const p = `../../${level}/${unit}/DataGrammar/image.png`;
+  fetch(p).then(r => { document.getElementById('main-image').src = r.ok ? p : 'default-image.png'; });
 }
 
 function setupFinishButton(){
@@ -325,15 +421,10 @@ function setupFinishButton(){
   btn.addEventListener('click', ()=>{
     firebase.auth().onAuthStateChanged(u=>{
       if(u && u.uid){
-        // Libera próxima fase e mostra modal
-        updateNextPhase(u.uid).then(()=>{
-          showCompletionMessage();
-        }).catch(()=>{
-          // Mesmo em erro de rede, mostra modal para não travar a UX; log permanece no console
-          showCompletionMessage();
-        });
+        updateNextPhase(u.uid)
+          .then(showCompletionMessage)
+          .catch(()=>showCompletionMessage()); // não travar UX se der erro
       }else{
-        // Se não autenticado, redireciona para login
         location.href='https://hannahenglishcourse.netlify.app/formulario/login';
       }
     });
@@ -349,6 +440,7 @@ window.addEventListener('load', ()=>{
     if(u && u.uid){
       document.body.style.visibility='visible';
       initializeAppContent();
+      revealPdfForTeachersOnly(u.uid); // <— PDF só para professor
     }else{
       location.href='https://hannahenglishcourse.netlify.app/formulario/login';
     }
